force-app/main/default/objects/Morning_Vehicle_Checklist__c/Morning_Vehicle_Checklist__c.object-meta.xml
<CustomObject>
    <label>Morning Vehicle Checklist</label>
    <nameField>
        <displayFormat>MVC-{0000000}</displayFormat>
        <label>Morning Vehicle Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Morning Vehicle Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>