force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Morning Vehicle Checklists</relationshipLabel>
    <relationshipName>Morning_Vehicle_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>