force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Fluids_Checked__c.field-meta.xml
<CustomField>
    <fullName>Fluids_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fluids Checked</label>
    <type>Checkbox</type>
</CustomField>