force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Foreman__c.field-meta.xml
<CustomField>
    <fullName>Foreman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foreman</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>MVC Foreman</relationshipLabel>
    <relationshipName>MVC_Foreman</relationshipName>
    <type>Lookup</type>
</CustomField>