force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Fuel_Checked__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Checked</label>
    <type>Checkbox</type>
</CustomField>