force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Lights_Checked__c.field-meta.xml
<CustomField>
    <fullName>Lights_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lights Checked</label>
    <type>Checkbox</type>
</CustomField>