force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Loading_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Loading_Ticket__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loading Ticket</label>
    <referenceTo>Loading_Ticket__c</referenceTo>
    <relationshipLabel>Morning Vehicle Checklists</relationshipLabel>
    <relationshipName>Morning_Vehicle_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>