force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Loading_Verified__c.field-meta.xml
<CustomField>
    <fullName>Loading_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loading Verified</label>
    <type>Checkbox</type>
</CustomField>