force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Material_Count_Matches__c.field-meta.xml
<CustomField>
    <fullName>Material_Count_Matches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Count Matches Loading Ticket</label>
    <type>Checkbox</type>
</CustomField>