force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Safety_Equipment_Checked__c.field-meta.xml
<CustomField>
    <fullName>Safety_Equipment_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Equipment Checked</label>
    <type>Checkbox</type>
</CustomField>