force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Session_Language__c.field-meta.xml
<CustomField>
    <fullName>Session_Language__c</fullName>
    <description>Language the foreman selected at the start of this session. Captured by the Pre-Shift Vehicle Check screen flow. English or Español. Used for reporting on bilingual adoption.</description>
    <label>Session Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Español</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>