force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Tires_Checked__c.field-meta.xml
<CustomField>
    <fullName>Tires_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tires Checked</label>
    <type>Checkbox</type>
</CustomField>