force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Trailer_Checked__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailer Checked</label>
    <type>Checkbox</type>
</CustomField>