force-app/main/default/objects/Morning_Vehicle_Checklist__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Morning Vehicle Checklists</relationshipLabel>
    <relationshipName>Morning_Vehicle_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>